# aws-robomaker-hospital-world

./: CMakeLists.txt
hooks/: aws_robomaker_hospital_world-fuel.dsv.in  aws_robomaker_hospital_world-fuel.sh.in
launch/: hospital.launch.py
maps/: explore_map.pgm  explore_map.yaml
worlds/: hospital.world
